# mbse-model-registry

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: model_packages.json
docs/: README.md  modeling_notes.md  project_plan.md
reports/: model-catalog.csv  model-dashboard.html  model-summary.md  repo-coverage.csv
src/mbse_model_registry/: __init__.py  analysis.py  cli.py  data.py  export.py
tests/: test_analysis.py
