[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mbse-model-registry"
version = "0.1.0"
description = "Model registry and architecture-view catalog for a systems engineering portfolio."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Akif" }
]
keywords = [
  "systems-engineering",
  "mbse",
  "architecture",
  "portfolio"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
mbse-model-registry = "mbse_model_registry.cli:run"

[tool.setuptools.packages.find]
where = ["src"]
